[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/weapons/MeleeWeapon.gd" type="Script" id=1]
[ext_resource path="res://assets/images/weapons/axe.png" type="Texture" id=2]
[ext_resource path="res://scenes/weapons/AudioStreamAxe2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.15578, 15.9839 )

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.04522, -3.40221 ), Vector2( -10.4034, -2.3438 ), Vector2( -10.1747, 5.81181 ), Vector2( -17.328, -4.63016 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -60.0, -120.0, 60.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_attack"
} ]
}

[node name="MeleeWeapon" type="Area2D"]
position = Vector2( 1.26278, -1.26277 )
rotation = -3.14159
scale = Vector2( 1, -1 )
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -10.4034, -2.3438 )
rotation = -1.0472
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="HitDetection" type="CollisionShape2D" parent="."]
position = Vector2( -21.3802, 3.78286 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/swing = SubResource( 2 )

[node name="BodyDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyDetection"]
position = Vector2( -22.5913, 3.6166 )
shape = SubResource( 1 )

[node name="AudioStreamAxe2D" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Weapon_body_entered"]
[connection signal="body_entered" from="BodyDetection" to="." method="_on_BodyDetection_body_entered"]
[connection signal="body_exited" from="BodyDetection" to="." method="_on_BodyDetection_body_exited"]
